update the styling to handle the revised code in index.html to ensure all is aligned on the page

--- a/public/styles/posted-tweets.css
+++ b/public/styles/posted-tweets.css
@@ -1,7 +1,8 @@
 #tweet-container {
   display: flex;
   width: 100%;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 article.tweet {
